# DataHackDays25

./: compose.yml  dockerfile  main.py  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
frontend/: bun.lockb  histogram.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
